# tutorial-mkdocs-du

./: .gitignore  404.html  index.html  index.md  mkdocs.yml  pyproject.toml
conteudos/conteudos_index/: index.html
docs/: index.md  jupyter_page.md  pagina_2.md
docs/conteudos/: conteudos_index.md
pagina_2/: index.html
search/: search_index.json
site/jupyter_page/: index.html
